--- a/sellingform.html
+++ b/sellingform.html
@@ -43,7 +43,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#!">Messages</a>
+                    <a class="nav-link" href="chat.html">Messages</a>
                 </li>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
