--- a/userhome.html
+++ b/userhome.html
@@ -42,7 +42,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#!">Messages</a>
+                    <a class="nav-link" href="chat.html">Messages</a>
                 </li>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -90,5 +90,6 @@
         <div id="bookListContainer" class="row gx-4 gx-lg-5">
             <!-- Book cards will be dynamically injected here -->
         </div>
+        
 </body>
 </html>
