--- a/userhome.html
+++ b/userhome.html
@@ -90,6 +90,24 @@
         <div id="bookListContainer" class="row gx-4 gx-lg-5">
             <!-- Book cards will be dynamically injected here -->
         </div>
-        
+        <!-- Send Message Modal -->
+<div class="modal fade" id="messageModal" tabindex="-1" aria-labelledby="messageModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="messageModalLabel">Send Message</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <textarea id="messageInput" class="form-control" rows="3" placeholder="Type your message..."></textarea>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" id="sendMessageBtn" class="btn btn-primary">Send</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </body>
 </html>
