fixed chat functionality

--- a/signup.html
+++ b/signup.html
@@ -194,7 +194,7 @@
                     <span aria-hidden="true">&times;</span>
                 </div>
                 <div class="modal-body">
-                    You have successfully registered!
+                    Verification email sent. Please verify to complete registration.
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" id="continueButton">Continue</button>
