--- a/chat.html
+++ b/chat.html
@@ -45,9 +45,6 @@
                 <li class="nav-item">
                   <a class="nav-link" href="chat.html">Messages</a>
                 </li>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                </form>
                 <li class="nav-item">
                     <a class="nav-link" href="sellingform.html">SELL A BOOK</a>
                 </li>   
@@ -96,9 +93,18 @@
                           <!-- Chat bubbles will be populated here -->
                       </div>
                       <div class="d-flex justify-content-start align-items-center pe-3 pt-3 mt-2">
-                          <input type="text" class="form-control form-control-lg me-1" id="writeMessage" placeholder="Type message">
-                          <a id="sendMessageButton" class="text-muted ms-3" href="#!"><i class="fas fa-paper-plane"></i></a>
-                      </div>
+                        <input type="text" class="form-control form-control-lg me-1" id="writeMessage" placeholder="Type message" style="font-family: monospace; font-weight: normal;">
+                        <!-- Add icons in a flexible container -->
+                        <div class="d-flex align-items-center">
+                            <a id="creditCardButton" class="text-muted me-2" href="#!">
+                                <i class="fa-regular fa-credit-card fa-lg"></i>
+                            </a>
+                            <a id="sendMessageButton" class="text-muted" href="#!">
+                                <i class="fas fa-paper-plane fa-lg"></i>
+                            </a>
+                        </div>
+                    </div>
+                    
                   </div>
                   
                   </div>
