--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
                             <li><a class="dropdown-item" href="#" data-genre="Horror">Horror</a></li>
                         </ul>
                     </li>
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    </form> 
                     <li class="nav-item">
                         <button class="btn btn-outline-success custom-hover-btn" type="submit" id="signinbutton" style="color: black;">Sign In</button>
                     </li>             
@@ -73,6 +70,33 @@
         <!-- Books Grid -->
         <div id="bookListContainer" class="row gx-4 gx-lg-5">
             <!-- Book cards will be dynamically injected here -->
+        </div>
+    </div>
+    <!-- More Info Modal -->
+    <div class="modal fade" id="moreInfoModal" tabindex="-1" aria-labelledby="moreInfoModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="moreInfoModalLabel">Book Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="d-flex justify-content-center mb-3">
+                        <img id="moreInfoBookImage" src="" alt="Book Image" class="img-fluid" style="max-width: 300px; max-height: 300px; border-radius: 8px;">
+                    </div>
+                    <ul class="list-group">
+                        <li class="list-group-item">Title: <span id="moreInfoBookTitle"></span></li>
+                        <li class="list-group-item">Author: <span id="moreInfoAuthor"></span></li>
+                        <li class="list-group-item">Genre: <span id="moreInfoGenre"></span></li>
+                        <li class="list-group-item">Condition: <span id="moreInfoCondition"></span></li>
+                        <li class="list-group-item">Description: <span id="moreInfoDescription"></span></li>
+                        <li class="list-group-item">Price: ₱<span id="moreInfoPrice"></span></li>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
