--- a/manage-account.html
+++ b/manage-account.html
@@ -65,7 +65,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="chat.html">Messages</a>
+                    <a class="nav-link" id="messagesLink" href="chat.html">Messages</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="sellingform.html">SELL A BOOK</a>
@@ -164,7 +164,7 @@
                         <form id="editProfileForm">
                             <!-- Profile Picture Upload and Preview -->
                             <div class="text-center">
-                                <img id="profilePicturePreview" src="images/default-avatar.png" alt="Profile Picture Preview" class="profile-preview" />
+                                <img id="profilePicturePreview" src="" alt="Profile Picture Preview" class="profile-preview" />
                             </div>
                             <div class="mb-4 form-section text-center">
                                 <label for="profilePicture" class="form-label small">Upload Profile Picture:</label>
