--- a/userhome.html
+++ b/userhome.html
@@ -42,7 +42,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="chat.html">Messages</a>
+                    <a class="nav-link" id="messagesLink" href="chat.html">Messages</a>
                 </li>               
                 <li class="nav-item">
                     <a class="nav-link" href="sellingform.html">SELL A BOOK</a>
