fixed a lot of stuff

--- a/chat.html
+++ b/chat.html
@@ -97,9 +97,6 @@
                       <div class="d-flex justify-content-start align-items-center pe-3 pt-3 mt-2">
                         <input type="text" class="form-control form-control-lg me-1" id="writeMessage" placeholder="Type message" style="font-family: monospace; font-weight: normal;">
                         <div class="d-flex align-items-center">
-                          <a id="creditCardButton" class="text-muted me-2" href="#!">
-                            <i class="fa-regular fa-credit-card fa-lg"></i>
-                          </a>
                           <a id="sendMessageButton" class="text-muted" href="#!">
                             <i class="fas fa-paper-plane fa-lg"></i>
                           </a>
@@ -132,7 +129,7 @@
         </div>
       </section>
       
-<!-- Modal for selecting a book -->
+<!-- Modal for requestPaymentButtonTrigger -->
 <div class="modal fade" id="requestPaymentModal" tabindex="-1" aria-labelledby="requestPaymentModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -216,9 +213,48 @@
   </div>
 </div>
 
+<!-- Modal for viewing payment slip -->
+<div class="modal fade" id="paymentSlipModal" tabindex="-1" aria-labelledby="paymentSlipModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="paymentSlipModalLabel">Payment Slip</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div id="paymentSlipDetails">
+          
+          <!-- Book Details Card -->
+          <h6 class="lead">Book Details</h6>
+          <div class="d-flex flex-column align-items-center justify-content-center">
+          <div class="card h-100 mb-3">
+            <div class="card-body">
+                <div class="d-flex justify-content-center">
+                    <img id="bookImage" src="" class="img-fluid" alt="Book Image" style="width: 236px; object-fit: cover;">
+                </div>
+                <h4 id="bookTitle" class="card-title mt-3 fs-5"></h4>
+                <h5 id="bookPrice" class="card-text mb-0 user-info-font"><strong>Price:</strong> ₱0.00</h5>
+            </div>
+          </div>
+          </div>
+          <div class="lineseparator border border-top-1 custombg-bwhite"></div>
 
-<script defer src="js/bootstrap.bundle.min.js"></script> <!-- Bootstrap JS -->
-<script defer type="module" src="js/chat.js"></script> <!-- Your custom JS -->
+          <!-- GCash Details -->
+          <h6 class="lead">Seller GCash Details</h6>
+          <img src="" id="slipGcashQr" class="card-img-top mx-auto mt-1" style="height: 200px; object-fit: contain;">
+          <p id="slipGcashName" class="text-center mt-1 mb-1 text-body-secondary"></p>
+          <p id="slipGcashNumber" class="text-center mt-1 mb-1 text-body-secondary"></p>
+          <div class="lineseparator border border-top-1 custombg-bwhite"></div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<script defer src="js/bootstrap.bundle.min.js"></script>
+<script defer type="module" src="js/chat.js"></script> 
 </body>
 
 </html>
