--- a/manage-account.html
+++ b/manage-account.html
@@ -94,8 +94,8 @@
         </div>
         <div class="d-flex flex-column custombg-bwhite pt-n1 rounded-bottom-3">
             <h1 id="userFullName" class="h3 text-center mb-2" style="color:#535353;"></h1>
-            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#editProfileModal">Edit Profile</button>
-        </div>
+            <button id="editProfileButton" type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#editProfileModal">Edit Profile</button>
+        </div>        
         <!-- Content Row -->
         <div class="container p-0">
             <div class="row mt-2 ms-0 me-0" style="gap: 110px;">
@@ -252,6 +252,22 @@
                 </div>
             </div>
         </div>
-        
+        <div class="modal fade" id="messageModal" tabindex="-1" aria-labelledby="messageModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="messageModalLabel">Send Message</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                <textarea id="messageInput" class="form-control" rows="3" placeholder="Type your message..."></textarea>
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" id="sendMessageBtn" class="btn btn-primary">Send</button>
+                </div>
+            </div>
+            </div>
+        </div>       
 </body>
 </html>
