added confirm payment and shipping details button functionality

--- a/chat.html
+++ b/chat.html
@@ -246,6 +246,8 @@
           <p id="slipGcashNumber" class="text-center mt-1 mb-1 text-body-secondary"></p>
           <div class="lineseparator border border-top-1 custombg-bwhite"></div>
 
+          <button type="button" class="btn btn-success mt-2 mx-auto d-block" id="paymentForTheBookIsSent">Confirm Payment and Send Shipping Details</button>
+
         </div>
       </div>
     </div>
