--- a/sellingform.html
+++ b/sellingform.html
@@ -112,7 +112,7 @@
                             <!-- Form Elements Section -->
                             <div class="col-lg-6">
                                 <div class="p-5">
-                                    <!-- Profile Picture Upload and Preview -->
+                                    <!--  Picture Upload and Preview -->
                                     <div class="text-center">
                                         <img id="profilePreview" src="" alt="Book Image Preview" class="profile-preview border" />
                                     </div>
