fixed image path

--- a/manage-account.html
+++ b/manage-account.html
@@ -21,7 +21,7 @@
         }
         .coverphoto{
             /* linear-gradient(transparent 70%, #fffffe 20%), url('/images/dandadan.jpg'); */
-            background: url('/images/dandadan.jpg');
+            background: url('images/dandadan.jpg');
             background-size: cover;
             background-position: center;
         }
