display into table book details added

--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
 
                                         <!-- Profile Picture Upload and Preview -->
                                         <div class="text-center">
-                                            <img id="profilePreview" src="images/default-avatar.png" alt="Profile Preview" class="profile-preview">
+                                            <img id="profilePreview" src="" alt="Profile Preview" class="profile-preview">
                                         </div>
                                         <div class="mb-4 form-section text-center">
                                             <label for="profilePicture" class="form-label small">Upload Profile Picture:</label>
